# search-mcp-registry

./: .gitignore  LICENSE  README.md  pyproject.toml  server.json
src/mcp_registry_client/: server.py
src/open_mcp_registry/: server.py
src/search_mcp_registry/: server.py
