[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "search-mcp-registry"
version = "0.1.0"
description = "A native MCP Server that searches a global registry of MCP tools."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "MCP Registry", email = "hello@example.com" }
]
dependencies = [
  "mcp",
  "httpx"
]

[project.scripts]
search-mcp-registry = "search_mcp_registry.server:main"

