[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "search-mcp-registry"
version = "0.1.1"
description = "Search and discover MCP servers from the MCP Registry."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "MCP Registry", email = "hello@example.com" }
]
dependencies = [
  "mcp",
  "httpx"
]

[project.scripts]
search-mcp-registry = "search_mcp_registry.server:main"

