[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "open-mcp-registry"
version = "0.1.0"
description = "Search and discover MCP servers from the MCP Registry."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "MCP Registry", email = "hello@example.com" }
]
dependencies = [
  "mcp",
  "httpx"
]

[project.scripts]
open-mcp-registry = "open_mcp_registry.server:main"
